// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI: index render stateless component with values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CLI
    closeCLIOverlay={[Function]}
    isTokenOpen={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form>
        <Blueprint.Dialog
          canOutsideClickClose={true}
          className="pt-dark"
          iconName="download"
          isOpen={true}
          onClose={[Function]}
          title="How to Deploy an App on STRATO"
        >
          <div>
            <div
              className="pt-dialog-body"
            >
              <div
                className="pt-form-group"
              >
                <div
                  className="pt-form-group pt-intent-danger"
                >
                  <div
                    className="pt-form-content"
                  >
                    Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                  </div>
                </div>
              </div>
            </div>
            <div
              className="pt-dialog-footer"
            >
              <div
                className="pt-dialog-footer-actions"
              >
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Download"
                />
              </div>
            </div>
          </div>
        </Blueprint.Dialog>
      </form>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Blueprint.Dialog
          canOutsideClickClose={true}
          className="pt-dark"
          iconName="download"
          isOpen={true}
          onClose={[Function]}
          title="How to Deploy an App on STRATO"
        >
          <div>
            <div
              className="pt-dialog-body"
            >
              <div
                className="pt-form-group"
              >
                <div
                  className="pt-form-group pt-intent-danger"
                >
                  <div
                    className="pt-form-content"
                  >
                    Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                  </div>
                </div>
              </div>
            </div>
            <div
              className="pt-dialog-footer"
            >
              <div
                className="pt-dialog-footer-actions"
              >
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Download"
                />
              </div>
            </div>
          </div>
        </Blueprint.Dialog>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "canOutsideClickClose": true,
          "children": <div>
            <div
              className="pt-dialog-body"
            >
              <div
                className="pt-form-group"
              >
                <div
                  className="pt-form-group pt-intent-danger"
                >
                  <div
                    className="pt-form-content"
                  >
                    Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                  </div>
                </div>
              </div>
            </div>
            <div
              className="pt-dialog-footer"
            >
              <div
                className="pt-dialog-footer-actions"
              >
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Download"
                />
              </div>
            </div>
          </div>,
          "className": "pt-dark",
          "iconName": "download",
          "isOpen": true,
          "onClose": [Function],
          "title": "How to Deploy an App on STRATO",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="pt-dialog-body"
              >
                <div
                  className="pt-form-group"
                >
                  <div
                    className="pt-form-group pt-intent-danger"
                  >
                    <div
                      className="pt-form-content"
                    >
                      Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                    </div>
                  </div>
                </div>
              </div>,
              <div
                className="pt-dialog-footer"
              >
                <div
                  className="pt-dialog-footer-actions"
                >
                  <Blueprint.Button
                    intent={0}
                    onClick={[Function]}
                    text="Download"
                  />
                </div>
              </div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="pt-form-group"
                >
                  <div
                    className="pt-form-group pt-intent-danger"
                  >
                    <div
                      className="pt-form-content"
                    >
                      Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                    </div>
                  </div>
                </div>,
                "className": "pt-dialog-body",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="pt-form-group pt-intent-danger"
                  >
                    <div
                      className="pt-form-content"
                    >
                      Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                    </div>
                  </div>,
                  "className": "pt-form-group",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="pt-form-content"
                    >
                      Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                    </div>,
                    "className": "pt-form-group pt-intent-danger",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.",
                      "className": "pt-form-content",
                    },
                    "ref": null,
                    "rendered": "Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.",
                    "type": "div",
                  },
                  "type": "div",
                },
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="pt-dialog-footer-actions"
                >
                  <Blueprint.Button
                    intent={0}
                    onClick={[Function]}
                    text="Download"
                  />
                </div>,
                "className": "pt-dialog-footer",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Blueprint.Button
                    intent={0}
                    onClick={[Function]}
                    text="Download"
                  />,
                  "className": "pt-dialog-footer-actions",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "intent": 0,
                    "onClick": [Function],
                    "text": "Download",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form>
          <Blueprint.Dialog
            canOutsideClickClose={true}
            className="pt-dark"
            iconName="download"
            isOpen={true}
            onClose={[Function]}
            title="How to Deploy an App on STRATO"
          >
            <div>
              <div
                className="pt-dialog-body"
              >
                <div
                  className="pt-form-group"
                >
                  <div
                    className="pt-form-group pt-intent-danger"
                  >
                    <div
                      className="pt-form-content"
                    >
                      Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="pt-dialog-footer"
              >
                <div
                  className="pt-dialog-footer-actions"
                >
                  <Blueprint.Button
                    intent={0}
                    onClick={[Function]}
                    text="Download"
                  />
                </div>
              </div>
            </div>
          </Blueprint.Dialog>
        </form>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Blueprint.Dialog
            canOutsideClickClose={true}
            className="pt-dark"
            iconName="download"
            isOpen={true}
            onClose={[Function]}
            title="How to Deploy an App on STRATO"
          >
            <div>
              <div
                className="pt-dialog-body"
              >
                <div
                  className="pt-form-group"
                >
                  <div
                    className="pt-form-group pt-intent-danger"
                  >
                    <div
                      className="pt-form-content"
                    >
                      Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="pt-dialog-footer"
              >
                <div
                  className="pt-dialog-footer-actions"
                >
                  <Blueprint.Button
                    intent={0}
                    onClick={[Function]}
                    text="Download"
                  />
                </div>
              </div>
            </div>
          </Blueprint.Dialog>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "canOutsideClickClose": true,
            "children": <div>
              <div
                className="pt-dialog-body"
              >
                <div
                  className="pt-form-group"
                >
                  <div
                    className="pt-form-group pt-intent-danger"
                  >
                    <div
                      className="pt-form-content"
                    >
                      Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="pt-dialog-footer"
              >
                <div
                  className="pt-dialog-footer-actions"
                >
                  <Blueprint.Button
                    intent={0}
                    onClick={[Function]}
                    text="Download"
                  />
                </div>
              </div>
            </div>,
            "className": "pt-dark",
            "iconName": "download",
            "isOpen": true,
            "onClose": [Function],
            "title": "How to Deploy an App on STRATO",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="pt-dialog-body"
                >
                  <div
                    className="pt-form-group"
                  >
                    <div
                      className="pt-form-group pt-intent-danger"
                    >
                      <div
                        className="pt-form-content"
                      >
                        Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                      </div>
                    </div>
                  </div>
                </div>,
                <div
                  className="pt-dialog-footer"
                >
                  <div
                    className="pt-dialog-footer-actions"
                  >
                    <Blueprint.Button
                      intent={0}
                      onClick={[Function]}
                      text="Download"
                    />
                  </div>
                </div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="pt-form-group"
                  >
                    <div
                      className="pt-form-group pt-intent-danger"
                    >
                      <div
                        className="pt-form-content"
                      >
                        Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                      </div>
                    </div>
                  </div>,
                  "className": "pt-dialog-body",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="pt-form-group pt-intent-danger"
                    >
                      <div
                        className="pt-form-content"
                      >
                        Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                      </div>
                    </div>,
                    "className": "pt-form-group",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <div
                        className="pt-form-content"
                      >
                        Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                      </div>,
                      "className": "pt-form-group pt-intent-danger",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.",
                        "className": "pt-form-content",
                      },
                      "ref": null,
                      "rendered": "Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.",
                      "type": "div",
                    },
                    "type": "div",
                  },
                  "type": "div",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="pt-dialog-footer-actions"
                  >
                    <Blueprint.Button
                      intent={0}
                      onClick={[Function]}
                      text="Download"
                    />
                  </div>,
                  "className": "pt-dialog-footer",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Blueprint.Button
                      intent={0}
                      onClick={[Function]}
                      text="Download"
                    />,
                    "className": "pt-dialog-footer-actions",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "intent": 0,
                      "onClick": [Function],
                      "text": "Download",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`CLI: index render stateless component without values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CLI
    closeCLIOverlay={[Function]}
    isTokenOpen={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form>
        <Blueprint.Dialog
          canOutsideClickClose={true}
          className="pt-dark"
          iconName="download"
          isOpen={false}
          onClose={[Function]}
          title="How to Deploy an App on STRATO"
        >
          <div>
            <div
              className="pt-dialog-body"
            >
              <div
                className="pt-form-group"
              >
                <div
                  className="pt-form-group pt-intent-danger"
                >
                  <div
                    className="pt-form-content"
                  >
                    Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                  </div>
                </div>
              </div>
            </div>
            <div
              className="pt-dialog-footer"
            >
              <div
                className="pt-dialog-footer-actions"
              >
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Download"
                />
              </div>
            </div>
          </div>
        </Blueprint.Dialog>
      </form>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Blueprint.Dialog
          canOutsideClickClose={true}
          className="pt-dark"
          iconName="download"
          isOpen={false}
          onClose={[Function]}
          title="How to Deploy an App on STRATO"
        >
          <div>
            <div
              className="pt-dialog-body"
            >
              <div
                className="pt-form-group"
              >
                <div
                  className="pt-form-group pt-intent-danger"
                >
                  <div
                    className="pt-form-content"
                  >
                    Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                  </div>
                </div>
              </div>
            </div>
            <div
              className="pt-dialog-footer"
            >
              <div
                className="pt-dialog-footer-actions"
              >
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Download"
                />
              </div>
            </div>
          </div>
        </Blueprint.Dialog>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "canOutsideClickClose": true,
          "children": <div>
            <div
              className="pt-dialog-body"
            >
              <div
                className="pt-form-group"
              >
                <div
                  className="pt-form-group pt-intent-danger"
                >
                  <div
                    className="pt-form-content"
                  >
                    Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                  </div>
                </div>
              </div>
            </div>
            <div
              className="pt-dialog-footer"
            >
              <div
                className="pt-dialog-footer-actions"
              >
                <Blueprint.Button
                  intent={0}
                  onClick={[Function]}
                  text="Download"
                />
              </div>
            </div>
          </div>,
          "className": "pt-dark",
          "iconName": "download",
          "isOpen": false,
          "onClose": [Function],
          "title": "How to Deploy an App on STRATO",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="pt-dialog-body"
              >
                <div
                  className="pt-form-group"
                >
                  <div
                    className="pt-form-group pt-intent-danger"
                  >
                    <div
                      className="pt-form-content"
                    >
                      Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                    </div>
                  </div>
                </div>
              </div>,
              <div
                className="pt-dialog-footer"
              >
                <div
                  className="pt-dialog-footer-actions"
                >
                  <Blueprint.Button
                    intent={0}
                    onClick={[Function]}
                    text="Download"
                  />
                </div>
              </div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="pt-form-group"
                >
                  <div
                    className="pt-form-group pt-intent-danger"
                  >
                    <div
                      className="pt-form-content"
                    >
                      Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                    </div>
                  </div>
                </div>,
                "className": "pt-dialog-body",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="pt-form-group pt-intent-danger"
                  >
                    <div
                      className="pt-form-content"
                    >
                      Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                    </div>
                  </div>,
                  "className": "pt-form-group",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="pt-form-content"
                    >
                      Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                    </div>,
                    "className": "pt-form-group pt-intent-danger",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.",
                      "className": "pt-form-content",
                    },
                    "ref": null,
                    "rendered": "Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.",
                    "type": "div",
                  },
                  "type": "div",
                },
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="pt-dialog-footer-actions"
                >
                  <Blueprint.Button
                    intent={0}
                    onClick={[Function]}
                    text="Download"
                  />
                </div>,
                "className": "pt-dialog-footer",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Blueprint.Button
                    intent={0}
                    onClick={[Function]}
                    text="Download"
                  />,
                  "className": "pt-dialog-footer-actions",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "intent": 0,
                    "onClick": [Function],
                    "text": "Download",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form>
          <Blueprint.Dialog
            canOutsideClickClose={true}
            className="pt-dark"
            iconName="download"
            isOpen={false}
            onClose={[Function]}
            title="How to Deploy an App on STRATO"
          >
            <div>
              <div
                className="pt-dialog-body"
              >
                <div
                  className="pt-form-group"
                >
                  <div
                    className="pt-form-group pt-intent-danger"
                  >
                    <div
                      className="pt-form-content"
                    >
                      Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="pt-dialog-footer"
              >
                <div
                  className="pt-dialog-footer-actions"
                >
                  <Blueprint.Button
                    intent={0}
                    onClick={[Function]}
                    text="Download"
                  />
                </div>
              </div>
            </div>
          </Blueprint.Dialog>
        </form>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Blueprint.Dialog
            canOutsideClickClose={true}
            className="pt-dark"
            iconName="download"
            isOpen={false}
            onClose={[Function]}
            title="How to Deploy an App on STRATO"
          >
            <div>
              <div
                className="pt-dialog-body"
              >
                <div
                  className="pt-form-group"
                >
                  <div
                    className="pt-form-group pt-intent-danger"
                  >
                    <div
                      className="pt-form-content"
                    >
                      Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="pt-dialog-footer"
              >
                <div
                  className="pt-dialog-footer-actions"
                >
                  <Blueprint.Button
                    intent={0}
                    onClick={[Function]}
                    text="Download"
                  />
                </div>
              </div>
            </div>
          </Blueprint.Dialog>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "canOutsideClickClose": true,
            "children": <div>
              <div
                className="pt-dialog-body"
              >
                <div
                  className="pt-form-group"
                >
                  <div
                    className="pt-form-group pt-intent-danger"
                  >
                    <div
                      className="pt-form-content"
                    >
                      Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="pt-dialog-footer"
              >
                <div
                  className="pt-dialog-footer-actions"
                >
                  <Blueprint.Button
                    intent={0}
                    onClick={[Function]}
                    text="Download"
                  />
                </div>
              </div>
            </div>,
            "className": "pt-dark",
            "iconName": "download",
            "isOpen": false,
            "onClose": [Function],
            "title": "How to Deploy an App on STRATO",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="pt-dialog-body"
                >
                  <div
                    className="pt-form-group"
                  >
                    <div
                      className="pt-form-group pt-intent-danger"
                    >
                      <div
                        className="pt-form-content"
                      >
                        Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                      </div>
                    </div>
                  </div>
                </div>,
                <div
                  className="pt-dialog-footer"
                >
                  <div
                    className="pt-dialog-footer-actions"
                  >
                    <Blueprint.Button
                      intent={0}
                      onClick={[Function]}
                      text="Download"
                    />
                  </div>
                </div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="pt-form-group"
                  >
                    <div
                      className="pt-form-group pt-intent-danger"
                    >
                      <div
                        className="pt-form-content"
                      >
                        Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                      </div>
                    </div>
                  </div>,
                  "className": "pt-dialog-body",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="pt-form-group pt-intent-danger"
                    >
                      <div
                        className="pt-form-content"
                      >
                        Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                      </div>
                    </div>,
                    "className": "pt-form-group",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <div
                        className="pt-form-content"
                      >
                        Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.
                      </div>,
                      "className": "pt-form-group pt-intent-danger",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.",
                        "className": "pt-form-content",
                      },
                      "ref": null,
                      "rendered": "Click the button below to download the document containing the instructions to setup and begin developing applications on the STRATO Blockchain on your machine.",
                      "type": "div",
                    },
                    "type": "div",
                  },
                  "type": "div",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="pt-dialog-footer-actions"
                  >
                    <Blueprint.Button
                      intent={0}
                      onClick={[Function]}
                      text="Download"
                    />
                  </div>,
                  "className": "pt-dialog-footer",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Blueprint.Button
                      intent={0}
                      onClick={[Function]}
                      text="Download"
                    />,
                    "className": "pt-dialog-footer-actions",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "intent": 0,
                      "onClick": [Function],
                      "text": "Download",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
